--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -12,8 +12,6 @@
  * Designed, built, and released under MIT license by @mdo. Learn more at
  * https://github.com/poole/poole.
  */
-
-
 /*
  * Contents
  *
@@ -26,7 +24,6 @@
  * Pagination
  */
 
-
 /*
  * Body resets
  *
@@ -35,19 +32,19 @@
 
 * {
   -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+  -moz-box-sizing   : border-box;
+  box-sizing        : border-box;
 }
 
-html,
-body {
-  margin: 0;
+body,
+html {
+  margin : 0;
   padding: 0;
 }
 
 html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-size  : 16px;
   line-height: 1.5;
 }
 @media (min-width: 38em) {
@@ -57,53 +54,70 @@ html {
 }
 
 body {
-  color: #515151;
-  background-color: #fff;
+  color                   : #515151;
+  background-color        : #fff;
   -webkit-text-size-adjust: 100%;
-      -ms-text-size-adjust: 100%;
+  -ms-text-size-adjust    : 100%;
 }
 
 /* No `:visited` state is required by default (browsers will use `a`) */
+
 a {
-  color: #268bd2;
+  color          : #268bd2;
   text-decoration: none;
 }
+
 a strong {
   color: inherit;
 }
+
 /* `:focus` is linked to `:hover` for basic accessibility */
-a:hover,
-a:focus {
+
+a:focus,
+a:hover {
   text-decoration: underline;
 }
 
 /* Headings */
-h1, h2, h3, h4, h5, h6 {
-  margin-bottom: .5rem;
-  font-weight: bold;
-  line-height: 1.25;
-  color: #313131;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom : .5rem;
+  font-weight   : bold;
+  line-height   : 1.25;
+  color         : #313131;
   text-rendering: optimizeLegibility;
 }
+
 h1 {
   font-size: 2rem;
 }
+
 h2 {
   margin-top: 1rem;
-  font-size: 1.5rem;
+  font-size : 1.5rem;
 }
+
 h3 {
   margin-top: 1.5rem;
-  font-size: 1.25rem;
+  font-size : 1.25rem;
 }
-h4, h5, h6 {
+
+h4,
+h5,
+h6 {
   margin-top: 1rem;
-  font-size: 1rem;
+  font-size : 1rem;
 }
 
 /* Body text */
+
 p {
-  margin-top: 0;
+  margin-top   : 0;
   margin-bottom: 1rem;
 }
 
@@ -111,185 +125,213 @@ strong {
   color: #303030;
 }
 
-
 /* Lists */
-ul, ol, dl {
-  margin-top: 0;
+
+dl,
+ol,
+ul {
+  margin-top   : 0;
   margin-bottom: 1rem;
 }
 
 dt {
   font-weight: bold;
 }
+
 dd {
   margin-bottom: .5rem;
 }
 
 /* Misc */
+
 hr {
-  position: relative;
-  margin: 1.5rem 0;
-  border: 0;
-  border-top: 1px solid #eee;
+  position     : relative;
+  margin       : 1.5rem 0;
+  border       : 0;
+  border-top   : 1px solid #eee;
   border-bottom: 1px solid #fff;
 }
 
 abbr {
-  font-size: 85%;
-  font-weight: bold;
-  color: #555;
+  font-size     : 85%;
+  font-weight   : bold;
+  color         : #555;
   text-transform: uppercase;
 }
+
 abbr[title] {
-  cursor: help;
+  cursor       : help;
   border-bottom: 1px dotted #e5e5e5;
 }
 
 /* Code */
+
 code,
 pre {
   font-family: "Consolas", "Courier New", monospace;
 }
+
 code {
-  padding: .25em .5em;
-  font-size: 85%;
-  color: #000000;
+  padding         : .25em .5em;
+  font-size       : 85%;
+  color           : #000000;
   background-color: #f5f5f5;
-  border-radius: 3px;
+  border-radius   : 3px;
 }
+
 pre {
-  display: block;
-  margin-top: 0;
-  margin-bottom: 1rem;
-  padding: 0;
-  font-size: .8rem;
-  line-height: 1.5;
-  white-space: pre;
+  display         : block;
+  margin-top      : 0;
+  margin-bottom   : 1rem;
+  padding         : 0;
+  font-size       : .8rem;
+  line-height     : 1.5;
+  white-space     : pre;
   background-color: #ffffff;
 }
+
 pre code {
-  padding: 0;
-  font-size: 100%;
-  color: inherit;
+  padding         : 0;
+  font-size       : 100%;
+  color           : inherit;
   background-color: transparent;
 }
+
 pre.lineno {
-  padding: 1rem 0.5rem 1rem 1rem;
-  border-right: 1px solid #ccc;
+  padding              : 1rem .5rem 1rem 1rem;
+  border-right         : 1px solid #ccc;
   -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  -webkit-user-select  : none;
+  -khtml-user-select   : none;
+  -moz-user-select     : none;
+  -ms-user-select      : none;
+  user-select          : none;
 }
+
 td.code {
   overflow-x: auto;
-  padding: 0 0 0 0.5rem;
-  margin: 0;
+  padding   : 0 0 0 .5rem;
+  margin    : 0;
 }
+
 td.gutter.gl {
-  width: 3em;
+  width     : 3em;
   text-align: right;
-  padding: 0;
-  margin: 0;
+  padding   : 0;
+  margin    : 0;
 }
 
 /* Pygments via Jekyll */
+
 .highlight {
   margin-bottom: 1rem;
   border-radius: 4px;
 }
+
 .highlight pre {
   margin-bottom: 0;
 }
 
 /* Gist via GitHub Pages */
+
 .gist .gist-file {
   font-family: "Consolas", "Courier New", monospace !important;
 }
+
 .gist .markdown-body {
   padding: 15px;
 }
+
 .gist pre {
-  padding: 0;
+  padding         : 0;
   background-color: transparent;
 }
+
 .gist .gist-file .gist-data {
-  font-size: .8rem !important;
+  font-size  : .8rem !important;
   line-height: 1.4;
 }
+
 .gist code {
-  padding: 0;
-  color: inherit;
+  padding         : 0;
+  color           : inherit;
   background-color: transparent;
-  border-radius: 0;
+  border-radius   : 0;
 }
 
 /* Quotes */
+
 blockquote {
-  padding: .5rem 1rem;
-  margin: .8rem 0;
-  color: #7a7a7a;
+  padding    : .5rem 1rem;
+  margin     : .8rem 0;
+  color      : #7a7a7a;
   border-left: .25rem solid #e5e5e5;
 }
+
 blockquote p:last-child {
   margin-bottom: 0;
 }
 @media (min-width: 30em) {
   blockquote {
     padding-right: 5rem;
-    padding-left: 1.25rem;
+    padding-left : 1.25rem;
   }
 }
 
 /* Images */
+
 img {
-  display: block;
-  max-width: 100%;
-  margin: 0 0 1rem;
+  display      : block;
+  max-width    : 100%;
+  margin       : 0 0 1rem;
   border-radius: 5px;
 }
 
 /* Videos */
+
 video {
-  width: 100%;
+  width : 100%;
   height: auto;
 }
 
 /* Embedded Videos */
+
 .embedded-video {
-  position: relative;
-  padding-bottom: 56.25%;  /* 16:9 */
-  padding-top: 25px;
-  height: 0;
+  position      : relative;
+  padding-bottom: 56.25%;
+  /* 16:9 */
+  padding-top   : 25px;
+  height        : 0;
 }
+
 .embedded-video iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top     : 0;
+  left    : 0;
+  width   : 100%;
+  height  : 100%;
 }
 
 /* Tables */
+
 table {
-  table-layout: fixed;
-  margin-bottom: 1rem;
-  width: 100%;
-  border: 1px solid #e5e5e5;
+  table-layout   : fixed;
+  margin-bottom  : 1rem;
+  width          : 100%;
+  border         : 1px solid #e5e5e5;
   border-collapse: collapse;
 }
+
 td,
 th {
   padding: .25rem .5rem;
-  border: 1px solid #e5e5e5;
+  border : 1px solid #e5e5e5;
 }
+
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
   background-color: #f5f5f5;
 }
-
 
 /*
  * Custom type
@@ -298,10 +340,9 @@ tbody tr:nth-child(odd) th {
  */
 
 .lead {
-  font-size: 1.25rem;
+  font-size  : 1.25rem;
   font-weight: 300;
 }
-
 
 /*
  * Messages
@@ -311,12 +352,11 @@ tbody tr:nth-child(odd) th {
  */
 
 .message {
-  margin-bottom: 1rem;
-  padding: 1rem;
-  color: #717171;
+  margin-bottom   : 1rem;
+  padding         : 1rem;
+  color           : #717171;
   background-color: #f9f9f9;
 }
-
 
 /*
  * Container
@@ -325,13 +365,12 @@ tbody tr:nth-child(odd) th {
  */
 
 .container {
-  max-width: 38rem;
-  padding-left:  1rem;
+  max-width    : 38rem;
+  padding-left : 1rem;
   padding-right: 1rem;
-  margin-left:  auto;
-  margin-right: auto;
+  margin-left  : auto;
+  margin-right : auto;
 }
-
 
 /*
  * Masthead
@@ -340,25 +379,27 @@ tbody tr:nth-child(odd) th {
  */
 
 .masthead {
-  padding-top:    1rem;
+  padding-top   : 1rem;
   padding-bottom: 1rem;
-  margin-bottom: 3rem;
+  margin-bottom : 3rem;
 }
+
 .masthead-title {
-  margin-top: 0;
+  margin-top   : 0;
   margin-bottom: 0;
-  color: #505050;
+  color        : #505050;
 }
+
 .masthead-title a {
   color: #505050;
 }
+
 .masthead-title small {
-  font-size: 75%;
-  font-weight: 400;
-  color: #c0c0c0;
+  font-size     : 75%;
+  font-weight   : 400;
+  color         : #c0c0c0;
   letter-spacing: 0;
 }
-
 
 /*
  * Posts and pages
@@ -373,49 +414,57 @@ tbody tr:nth-child(odd) th {
 }
 
 /* Blog post or page title */
+
 .page-title,
 .post-title,
 .post-title a {
   color: #303030;
 }
+
 .page-title,
 .post-title {
   margin-top: 0;
 }
 
 /* Meta data lines below post title */
+
 .post-metadata {
-  display: block;
-  margin-top: -.5rem;
+  display      : block;
+  margin-top   : -.5rem;
   margin-bottom: 1rem;
-  color: #9a9a9a;
+  color        : #9a9a9a;
 }
 
 /* Related posts */
+
 .related {
-  padding-top: 2rem;
+  padding-top   : 2rem;
   padding-bottom: 2rem;
-  border-top: 1px solid #eee;
+  border-top    : 1px solid #eee;
 }
+
 .related-posts {
   padding-left: 0;
-  list-style: none;
+  list-style  : none;
 }
+
 .related-posts h3 {
   margin-top: 0;
 }
+
 .related-posts li small {
   font-size: 75%;
-  color: #999;
+  color    : #999;
 }
+
 .related-posts li a:hover {
-  color: #268bd2;
+  color          : #268bd2;
   text-decoration: none;
 }
+
 .related-posts li a:hover small {
   color: inherit;
 }
-
 
 /*
  * Pagination
@@ -425,45 +474,51 @@ tbody tr:nth-child(odd) th {
  */
 
 .pagination {
-  overflow: hidden; /* clearfix */
-  margin-left: -1rem;
+  overflow    : hidden;
+  /* clearfix */
+  margin-left : -1rem;
   margin-right: -1rem;
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
-  color: #ccc;
-  text-align: center;
+  font-family : "PT Sans", Helvetica, Arial, sans-serif;
+  color       : #ccc;
+  text-align  : center;
 }
 
 /* Pagination items can be `span`s or `a`s */
+
 .pagination-item {
   display: block;
   padding: 1rem;
-  border: 1px solid #eee;
+  border : 1px solid #eee;
 }
+
 .pagination-item:first-child {
   margin-bottom: -1px;
 }
 
 /* Only provide a hover state for linked pagination items */
+
 a.pagination-item:hover {
   background-color: #f5f5f5;
 }
-
 @media (min-width: 30em) {
   .pagination {
     margin: 3rem 0;
   }
+
   .pagination-item {
     float: left;
     width: 50%;
   }
+
   .pagination-item:first-child {
-    margin-bottom: 0;
-    border-top-left-radius:    4px;
+    margin-bottom            : 0;
+    border-top-left-radius   : 4px;
     border-bottom-left-radius: 4px;
   }
+
   .pagination-item:last-child {
-    margin-left: -1px;
-    border-top-right-radius:    4px;
+    margin-left               : -1px;
+    border-top-right-radius   : 4px;
     border-bottom-right-radius: 4px;
   }
 }
