--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -188,6 +188,7 @@ pre {
   font-size       : .8rem;
   line-height     : 1.5;
   white-space     : pre;
+  word-break      : keep-all;
   background-color: #fff;
 }
 
@@ -210,7 +211,6 @@ pre.lineno {
 }
 
 td.code {
-  overflow-x: auto;
   padding   : 0 0 0 .5rem;
   margin    : 0;
 }
@@ -222,8 +222,14 @@ td.gutter.gl {
   margin    : 0;
 }
 
+.highlight {
+  background-color: #f5f5f5;
+  max-height      : 62em;
+  overflow        : auto;
+}
+
 .highlight table {
-  table-layout: fixed;
+  margin: 0;
 }
 
 .highlight tbody tr:nth-child(odd) td,
@@ -307,8 +313,7 @@ video {
 
 .embedded-video {
   position      : relative;
-  padding-bottom: 56.25%;
-  /* 16:9 */
+  padding-bottom: 56.25%; /* 16:9 */
   padding-top   : 25px;
   height        : 0;
 }
