--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,9 @@
 <html lang="en-us">
 
   {% include head.html %}
-  {% include google-analytics.html %}
+  {% if jekyll.environment == 'production' %}
+    {% include google-analytics.html %}
+  {% endif %}
 
   <body>
     <div class="masthead">
