--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,4 +32,10 @@
 
   <!-- MathJax -->
   <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
+  <!-- Latest version of jQuery -->
+  <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+
+  <!-- Website's own scripts -->
+  <script src="{{ site.baseurl }}/public/js/scripts.js"></script>
 </head>
