Make CSS style consistent

--- a/public/css/syntax.css
+++ b/public/css/syntax.css
@@ -64,7 +64,9 @@
 
 /* Adjusted to give override background and text colour */
 
-.highlight pre, pre, .highlight .hll {
+.highlight .hll,
+.highlight pre,
+pre {
   background-color: #f5f5f5;
-  color: #000;
+  color           : #000;
 }
