--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-  <!-- Enable responsiveness on mobile devices-->
+  <!-- Enable responsiveness on mobile devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <title>
@@ -28,14 +28,14 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/font-awesome.css">
+  <script src="https://use.fontawesome.com/4036a2809a.js"></script>
 
   <!-- MathJax -->
-  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 
-  <!-- Latest version of jQuery -->
+  <!-- jQuery -->
   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 
-  <!-- Website's own scripts -->
+  <!-- Self scripts -->
   <script src="{{ site.baseurl }}/public/js/scripts.js"></script>
 </head>
