--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -186,7 +186,7 @@ pre {
   margin-bottom   : 1rem;
   padding         : 0;
   font-size       : .8rem;
-  line-height     : 1.5;
+  line-height     : 1.5rem;
   white-space     : pre;
   word-break      : keep-all;
   background-color: #fff;
@@ -199,9 +199,36 @@ pre code {
   background-color: transparent;
 }
 
-pre.lineno {
-  padding              : 1rem .5rem 1rem 1rem;
-  border-right         : 1px solid #ccc;
+.gl {
+  border-right: 1px solid #ccc;
+  width       : 50px;
+  padding     : 0;
+  overflow    : hidden;
+}
+
+.lineno {
+  padding : .25rem .5rem;
+  overflow: hidden;
+}
+
+.code {
+  padding-left         : .5rem;
+  -webkit-touch-callout: auto;
+  -webkit-user-select  : auto;
+  -khtml-user-select   : auto;
+  -moz-user-select     : auto;
+  -ms-user-select      : auto;
+  user-select          : auto;
+}
+
+.highlight {
+  background-color: #f5f5f5;
+  max-height      : 65em;
+  overflow        : auto;
+}
+
+.highlight table {
+  margin               : 0;
   -webkit-touch-callout: none;
   -webkit-user-select  : none;
   -khtml-user-select   : none;
@@ -210,31 +237,31 @@ pre.lineno {
   user-select          : none;
 }
 
-td.code {
-  padding   : 0 0 0 .5rem;
-  margin    : 0;
-}
-
-td.gutter.gl {
-  width     : 3em;
-  text-align: right;
-  padding   : 0;
-  margin    : 0;
-}
-
-.highlight {
-  background-color: #f5f5f5;
-  max-height      : 62em;
-  overflow        : auto;
-}
-
-.highlight table {
-  margin: 0;
-}
-
 .highlight tbody tr:nth-child(odd) td,
 .highlight tbody tr:nth-child(odd) th {
   background-color: #f5f5f5;
+}
+
+.copy-code-container {
+  position   : absolute;
+  right      : 17%;
+  margin-top : 5px;
+}
+
+.copy-code-button {
+  position: relative;
+  text-align: right;
+  font-family          : "Consolas", "Courier New", monospace;
+  font-size            : .8rem;
+  padding              : 10px;
+  cursor               : pointer;
+  word-break           : keep-all;
+  -webkit-touch-callout: none;
+  -webkit-user-select  : none;
+  -khtml-user-select   : none;
+  -moz-user-select     : none;
+  -ms-user-select      : none;
+  user-select          : none;
 }
 
 /* Pygments via Jekyll */
@@ -247,6 +274,7 @@ td.gutter.gl {
 .highlight pre {
   margin-bottom: 0;
 }
+
 /* Gist via GitHub Pages */
 
 .gist .gist-file {
@@ -313,7 +341,9 @@ video {
 
 .embedded-video {
   position      : relative;
-  padding-bottom: 56.25%; /* 16:9 */
+  padding-bottom: 56.25%;
+
+/* 16:9 */
   padding-top   : 25px;
   height        : 0;
 }
