Use Google's Prettify instead of Pygments Highlighting

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,14 +27,17 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <!-- Google Prettify -->
+  <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=desert"></script>
+
   <!-- Font Awesome -->
   <script src="https://use.fontawesome.com/4036a2809a.js"></script>
 
   <!-- MathJax -->
   <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-
-  <!-- jQuery -->
-  <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 
   <!-- Self scripts -->
   <script src="{{ site.baseurl }}/public/js/scripts.js"></script>
