--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -1,3 +1,4 @@
+
 /*
  *                        ___
  *                       /\_ \
@@ -32,9 +33,9 @@
  */
 
 * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing   : border-box;
   box-sizing        : border-box;
+  -moz-box-sizing   : border-box;
+  -webkit-box-sizing: border-box;
 }
 
 body,
@@ -55,10 +56,10 @@ html {
 }
 
 body {
-  color                   : #515151;
   background-color        : #fff;
-  -webkit-text-size-adjust: 100%;
+  color                   : #515151;
   -ms-text-size-adjust    : 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 /* No `:visited` state is required by default (browsers will use `a`) */
@@ -88,9 +89,9 @@ h4,
 h5,
 h6 {
   margin-bottom : .5rem;
+  color         : #313131;
   font-weight   : bold;
   line-height   : 1.25;
-  color         : #313131;
   text-rendering: optimizeLegibility;
 }
 
@@ -148,21 +149,20 @@ dd {
 hr {
   position     : relative;
   margin       : 1.5rem 0;
-  border       : 0;
   border-top   : 1px solid #eee;
   border-bottom: 1px solid #fff;
 }
 
 abbr {
+  color         : #555;
   font-size     : 85%;
   font-weight   : bold;
-  color         : #555;
   text-transform: uppercase;
 }
 
 abbr[title] {
-  cursor       : help;
   border-bottom: 1px dotted #e5e5e5;
+  cursor       : help;
 }
 
 /* Code */
@@ -174,105 +174,44 @@ pre {
 
 code {
   padding         : .25em .5em;
-  font-size       : 85%;
-  color           : #000;
-  background-color: #f5f5f5;
   border-radius   : 3px;
+  background-color: #f5f5f5;
+  color           : #bf616a;
+  font-size       : 85%;
 }
 
 pre {
   display         : block;
-  margin-top      : 0;
+  overflow        : auto;
+  max-height      : 75rem;
   margin-bottom   : 1rem;
-  padding         : 0;
   font-size       : .8rem;
   line-height     : 1.5rem;
   white-space     : pre;
   word-break      : keep-all;
-  background-color: #fff;
-}
-
-pre code {
-  padding         : 0;
-  font-size       : 100%;
-  color           : inherit;
-  background-color: transparent;
-}
-
-.gl {
-  border-right: 1px solid #ccc;
-  width       : 50px;
-  padding     : 0;
-  overflow    : hidden;
-}
-
-.lineno {
-  padding : .25rem .5rem;
-  overflow: hidden;
-}
-
-.code {
-  padding-left         : .5rem;
-  -webkit-touch-callout: auto;
-  -webkit-user-select  : auto;
-  -khtml-user-select   : auto;
-  -moz-user-select     : auto;
-  -ms-user-select      : auto;
-  user-select          : auto;
-}
-
-.highlight {
-  background-color: #f5f5f5;
-  max-height      : 65em;
-  overflow        : auto;
-}
-
-.highlight table {
-  margin               : 0;
-  -webkit-touch-callout: none;
-  -webkit-user-select  : none;
-  -khtml-user-select   : none;
-  -moz-user-select     : none;
-  -ms-user-select      : none;
-  user-select          : none;
-}
-
-.highlight tbody tr:nth-child(odd) td,
-.highlight tbody tr:nth-child(odd) th {
-  background-color: #f5f5f5;
 }
 
 .copy-code-container {
-  position   : absolute;
-  right      : 17%;
-  margin-top : 5px;
+  position: relative;
 }
 
 .copy-code-button {
-  position: relative;
-  text-align: right;
+  position             : absolute;
+  top                  : 0;
+  right                : 0;
+  display              : inline-block;
+  padding              : 7px;
   font-family          : "Consolas", "Courier New", monospace;
   font-size            : .8rem;
-  padding              : 10px;
-  cursor               : pointer;
+  text-align           : right;
   word-break           : keep-all;
-  -webkit-touch-callout: none;
-  -webkit-user-select  : none;
+  cursor               : pointer;
   -khtml-user-select   : none;
   -moz-user-select     : none;
   -ms-user-select      : none;
+  -webkit-touch-callout: none;
+  -webkit-user-select  : none;
   user-select          : none;
-}
-
-/* Pygments via Jekyll */
-
-.highlight {
-  margin-bottom: 1rem;
-  border-radius: 4px;
-}
-
-.highlight pre {
-  margin-bottom: 0;
 }
 
 /* Gist via GitHub Pages */
@@ -297,18 +236,18 @@ pre code {
 
 .gist code {
   padding         : 0;
-  color           : inherit;
-  background-color: transparent;
   border-radius   : 0;
+  background-color: transparent;
+  color           : inherit;
 }
 
 /* Quotes */
 
 blockquote {
-  padding    : .5rem 1rem;
   margin     : .8rem 0;
-  color      : #7a7a7a;
+  padding    : .5rem 1rem;
   border-left: .25rem solid #e5e5e5;
+  color      : #7a7a7a;
 }
 
 blockquote p:last-child {
@@ -316,8 +255,8 @@ blockquote p:last-child {
 }
 @media (min-width: 30em) {
   blockquote {
-    padding-right: 5rem;
     padding-left : 1.25rem;
+    padding-right: 5rem;
   }
 }
 
@@ -337,15 +276,13 @@ video {
   height: auto;
 }
 
-/* Embedded Videos */
+/* Embedded Videos 16:9 Ratio */
 
 .embedded-video {
   position      : relative;
-  padding-bottom: 56.25%;
-
-/* 16:9 */
-  padding-top   : 25px;
   height        : 0;
+  padding-top   : 25px;
+  padding-bottom: 56.25%;
 }
 
 .embedded-video iframe {
@@ -359,11 +296,11 @@ video {
 /* Tables */
 
 table {
-  table-layout   : auto;
-  margin-bottom  : 1rem;
   width          : 100%;
+  margin-bottom  : 1rem;
   border         : 1px solid #e5e5e5;
   border-collapse: collapse;
+  table-layout   : auto;
 }
 
 td,
@@ -497,8 +434,8 @@ tbody tr:nth-child(odd) th {
 }
 
 .related-posts li small {
-  font-size: 75%;
   color    : #999;
+  font-size: 75%;
 }
 
 .related-posts li a:hover {
@@ -521,8 +458,8 @@ tbody tr:nth-child(odd) th {
   overflow    : hidden;
   margin-left : -1rem;
   margin-right: -1rem;
-  font-family : "PT Sans", Helvetica, Arial, sans-serif;
   color       : #ccc;
+  font-family : "PT Sans", Helvetica, Arial, sans-serif;
   text-align  : center;
 }
 
